<LinearLayout android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/transparent"
    android:layout_gravity="center_vertical"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/colorPrimary">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fragment_registradora_tit"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/fragRegistradoraEDTDesc"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:inputType="text"
                android:hint="@string/widget_registradora_descricao"
                android:gravity="center_vertical|center_horizontal" />

            <EditText
                android:id="@+id/fragRegistradoraEDTqtde"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:text="@string/fragment_cad_venda_qtde"
                android:hint="@string/widget_registradora_qtde"
                android:inputType="number"
                android:textAlignment="center"
                android:nextFocusDown="@+id/fragRegistradoraEDTvalor" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="horizontal">


            <EditText
                android:id="@+id/fragRegistradoraEDTvalor"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/widget_registradora_valor"
                android:inputType="number"
                android:textAlignment="center"
                android:nextFocusDown="@+id/fragVendaEDTvenda" />


            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/fragment_registradora_status"
                    android:textAlignment="center"
                    android:textSize="18sp" />

                <Spinner
                    android:id="@+id/fraRegistradoraStatus"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:entries="@array/registradora_status"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/fragment_cad_venda_tele"
                    android:textAlignment="center"
                    android:textSize="18sp" />

                <Spinner
                    android:id="@+id/fragRegistradoraSpinnerTele"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:entries="@array/venda_entrega"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/fragment_cad_venda_pag"
                    android:textAlignment="center"
                    android:textSize="18sp" />

                <Spinner
                    android:id="@+id/fragRegistradoraSpinnerPagamento"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:entries="@array/venda_pagamento" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="0.4"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/fragment_cad_venda_int"
                    android:textSize="18sp" />

                <CheckBox
                    android:id="@+id/fragRegistradoraCheckInteira"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:entries="@array/venda_pagamento" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/fragRegistradoraLinEntre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fragment_cad_venda_end"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:orientation="horizontal">

                <Spinner
                    android:id="@+id/fragRegistradoraEDTrua"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:hint="@string/fragment_cad_venda_end"
                    android:inputType="text"
                    android:entries="@array/venda_enderecos"
                    android:textAlignment="center" />


                <EditText
                    android:id="@+id/fragRegistradoraEDTnumero"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.4"
                    android:hint="@string/fragment_cad_venda_num"
                    android:inputType="number"
                    android:textAlignment="center" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:orientation="horizontal">

                <Spinner
                    android:id="@+id/fragRegistradoraEDTbairro"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:hint="@string/fragment_cad_venda_bairro"
                    android:inputType="text"
                    android:entries="@array/venda_bairros"
                    android:textAlignment="center"/>

                <Spinner
                    android:id="@+id/fragRegistradoraEDTboy"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:hint="@string/fragment_cad_venda_moto"
                    android:textAlignment="center" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:gravity="center">

            <ImageView
                android:id="@+id/fragRegistradoraIMGcancel"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:contentDescription="@string/venda_content_img"
                android:src="@drawable/ic_erro" />

            <ImageView
                android:id="@+id/fragRegistradoraIMGok"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginStart="50dp"
                android:contentDescription="@string/venda_content_img"
                android:src="@drawable/ic_sucesso" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
