<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="5dp"
    android:orientation="horizontal">

<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_weight="1"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/widget_registradora_valor"
        android:textAlignment="center"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/widget_registradora_txtValor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="15sp" />

</LinearLayout>

<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_weight="1"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/widget_registradora_descricao"
        android:textAlignment="center"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/widget_registradora_txtDescricao"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="15sp" />
</LinearLayout>

<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_weight="1"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView11"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/widget_registradora_qtde"
        android:textAlignment="center"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/widget_registradora_txtQuantidade"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="15sp" />
</LinearLayout>

<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_weight="1"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textViewTele"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/widget_registradora_tele"
        android:textAlignment="center"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/widget_registradora_txtTele"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="15sp" />
</LinearLayout>

    <FrameLayout
        android:layout_width="50dp"
        android:layout_height="50dp">

        <ImageView
            android:id="@+id/widget_registradora_imgProduto"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:contentDescription="@string/widget_registradora_img"
            android:padding="2dp"
            android:src="@drawable/ic_gas_bujao" />

        <ImageView
            android:id="@+id/widget_registradora_imgStatus"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginBottom="2dp"
            android:layout_gravity="end|bottom"
            android:contentDescription="@string/widget_registradora_img_status" />

    </FrameLayout>

</LinearLayout>